# education-website

./: .cursorrules  .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  PRE-COMMIT-README.md  README.md  ansible.cfg  crontab  default_3.sqlite3  deploy.sh  inventory.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  run.sh  setup.sh  site.yml  tailwind.config.js  test_deployment.sh
.github/: PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md  copilot-instructions.md  copilot-setup-steps.yml
.qodo/: history.sqlite
ansible/: OPTIMIZATION_GUIDE.md  README.md  ansible.cfg  cleanup.yml  deploy-optimized.yml  deploy.sh  deploy.yml  education-website.service.j2  env.j2  fix_db.yml  hosts  hosts.yml  inventory.yml  migrate.yml  nginx-http.conf.j2  nginx.conf.j2  playbook.yml  quick_test.yml  reboot.yml  secrets.yml  simple_test.yml  site.yml  ssh.sh  temp_vault.yml  test_site.yml  update.sh.j2  update.yml  wait_for_vps.sh
scripts/: assign.js  assign.py  deploy.sh  deploy_db.sh  deploy_single.sh  mysql_to_postgresql.py  test.sh  verify_db.sh  vultr_reformat_db.sh  vultr_reformat_single.sh
tasks/: app.yml  nginx.yml  postgresql.yml  ssl.yml  systemd.yml  ufw.yml
templates/: env.j2  nginx.conf.j2  systemd.service.j2
tests/: test_trackers.py
web/: admin.py  admin_views.py  ai_recommendations.py  apps.py  asgi.py  calendar_sync.py  classroom_views.py  consumers.py  context_processors.py  decorators.py  email_backend.py  forms.py  forms_additional.py  marketing.py  middleware.py  models.py  notifications.py  peer_challenge_views.py  quiz_views.py  recommendations.py  referrals.py  routing.py  secure_messaging.py  settings.py  signals.py  slack.py  (+16 more)
(+513 files in other folders)
