[tool.poetry]
name = "alphaonelabs-education-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
requests = "^2.32.3"
django-environ = "^0.11.2"
sentry-sdk = "^2.19.2"
redis = "^5.2.1"
django-simple-captcha = "^0.6.0"
sendgrid-django = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
